--- a/src/App.css
+++ b/src/App.css
@@ -1,92 +1,98 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+
+/* General styles */
+* {
+  margin: 0;
+  padding: 0;
+}
+body {
+  position: relative;
+  background-color: #c5c9ca;
+  font-family: "Roboto", serif;
+}
+.root {
+  min-height: 100vh;
+}
+a {
+  text-decoration: none;
+  color: rgb(221, 164, 42);
+}
+
+/* NavBar */
+nav {
+  padding: 1em;
+  border-bottom: 2px solid black;
+  position: sticky;
+}
+nav ul {
+  padding: 1em;
+  display: flex;
+  justify-content: space-between;
+}
+nav li {
+  list-style: none;
+}
+nav a {
+  background-color: black;
+  font-size: larger;
+  padding: 1em;
+  padding-left: 2em;
+  padding-right: 2em;
+  border-radius: 30px;
+}
+
+nav a:hover {
+  background-color: #cc0000;
+  color: white;
+}
+
+/* Blog */
+h1 {
+  padding-top: 1em;
+  text-align: center;
+}
+.posts {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .post {
   margin: 2em 0;
   padding: 1em;
   border-bottom: 1px solid #eee;
+  width: 50%;
+  min-width: 30em;
 }
 .post:last-child {
   border-bottom: none;
 }
-.read-more {
-  display: inline-block;
-  margin-top: 1em;
-  color: #0066cc;
-  text-decoration: none;
-}
-.read-more:hover {
-  text-decoration: underline;
-}
+
 /* Style for code blocks */
 pre {
   padding: 1em;
-  border-radius: 5px;
   overflow-x: auto;
-}
-code {
-  font-family: "Consolas", "Monaco", monospace;
 }
 
-/* post styles */
-.container {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 2em;
-}
-.back-link {
-  display: block;
-  margin: 2em 0;
-  color: #0066cc;
-  text-decoration: none;
-}
-.back-link:hover {
-  text-decoration: underline;
-}
-pre {
-  background-color: #1e1e1e;
-  padding: 1em;
-  border-radius: 5px;
-  overflow-x: auto;
-  margin: 1em 0;
-}
-pre code {
+code {
   font-family: "Consolas", "Monaco", "Courier New", monospace;
   font-size: 14px;
   line-height: 1.5;
-  color: #0e92b3;
+  border-radius: 5px;
 }
+
 /* Style inline code differently from code blocks */
 :not(pre) > code {
-  background-color: #f0f0f0;
+  background-color: #f6f8fa;
   padding: 2px 4px;
   border-radius: 3px;
   color: #e83e8c;
 }
 
-/* post styles */
+/* Container styles */
 .container {
   max-width: 800px;
   margin: 0 auto;
   padding: 2em;
-}
-.back-link {
-  display: block;
-  margin: 2em 0;
-  color: #0066cc;
-  text-decoration: none;
-}
-.back-link:hover {
-  text-decoration: underline;
-}
-
-pre code {
-  font-size: 14px;
-  line-height: 1.5;
-}
-/* Style inline code differently from code blocks */
-:not(pre) > code {
-  background-color: #f0f0f0;
-  padding: 2px 4px;
-  border-radius: 3px;
-  color: #e83e8c;
 }
 /* techStack styles */
 .ruby:hover {
