--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 
 body {
   position: relative;
+  min-height: 100vh;
 }
 .App {
   width: 100%;
@@ -41,7 +42,34 @@ nav a:hover {
   background-color: #cc0000;
   color: white;
 }
-
+/* tech stack*/
+.tech {
+  height: 20vh;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: x-large;
+  font-weight: 700;
+  cursor: default;
+}
+.tech p:hover {
+  transform: scale(2);
+}
+.tech p {
+  transition: transform 500ms ease-in-out;
+}
+/* projects */
+.projects {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+footer {
+  height: 20vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 /* Blog */
 h1 {
   padding-top: 1em;
