--- a/src/ProjectCard.css
+++ b/src/ProjectCard.css
@@ -3,6 +3,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  padding: 1em;
+  border: 1px solid black;
+  border-radius: 5px;
 }
 .card p {
   text-wrap: wrap;
