--- a/src/ProjectCard.css
+++ b/src/ProjectCard.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-content: space-between;
   padding: 1em;
-  border: 1px solid black;
+  border: 2px solid var(--primary-text-color);
   border-radius: 5px;
 }
 .card p {
