--- a/src/App.css
+++ b/src/App.css
@@ -26,4 +26,5 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  border-top: 2px solid var(--primary-text-color);
 }
