--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,11 @@
 body {
   position: relative;
   min-height: 100vh;
+  height: fit-content;
 }
 .App {
   width: 100%;
+
   transition: background-color 250ms ease-in-out;
   background-color: var(--background-color);
   color: var(--primary-text-color);
@@ -22,9 +24,14 @@ a {
   gap: 1em;
 }
 footer {
-  height: 20vh;
+  height: 10vh;
   display: flex;
   justify-content: center;
   align-items: center;
   border-top: 2px solid var(--primary-text-color);
+}
+@media only screen and (max-width: 780px) {
+  footer {
+    height: 8vh;
+  }
 }
