--- a/src/LandingPage.css
+++ b/src/LandingPage.css
@@ -82,3 +82,29 @@ legend {
   z-index: 1;
   top: -13px;
 }
+
+@media only screen and (max-width: 780px) {
+  main {
+    padding: 4em;
+  }
+  .hero h1 {
+    font-size: 2em;
+  }
+  fieldset {
+    height: 30vh;
+  }
+  .tech {
+    height: 100%;
+    flex-direction: column;
+    align-items: space-evenly;
+    font-size: large;
+    gap: 1em;
+  }
+}
+@media only screen and (min-width: 780px) and (max-width: 1300px) {
+  .hero h1 {
+    font-size: 3em;
+  }
+}
+@media only screen and (max-width: 380px) {
+}
