--- a/src/ProjectCard.css
+++ b/src/ProjectCard.css
@@ -46,3 +46,13 @@
   display: flex;
   gap: 0.5em;
 }
+@media only screen and (max-width: 580px) {
+  .container {
+    width: 300px;
+    height: 250px;
+  }
+  .back {
+    padding-left: 1em;
+    padding-right: 1em;
+  }
+}
