--- a/src/ProjectCard.css
+++ b/src/ProjectCard.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   width: 500px;
   height: 350px;
   perspective: 800px;
@@ -40,11 +40,36 @@
 }
 .back p {
   align-self: flex-start;
+} */
+.card {
+  padding-top: 0.5em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 500px;
+  height: 350px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px 2px rgba(50, 50, 50, 0.25);
+  transition: transform 1500ms;
+}
+.card p {
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+}
+.card img {
+  width: 100%;
+  height: 80%;
 }
 .links {
   align-self: flex-end;
   display: flex;
   gap: 0.5em;
+}
+.open {
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  transform: scale(1.8);
 }
 @media only screen and (max-width: 580px) {
   .container {
