--- a/src/LandingPage.css
+++ b/src/LandingPage.css
@@ -93,7 +93,7 @@ legend {
   .tech {
     height: 100%;
     flex-direction: column;
-    align-items: space-evenly;
+    align-items: center;
     font-size: large;
     gap: 1em;
   }
