--- a/src/ThemeSwitch.css
+++ b/src/ThemeSwitch.css
@@ -14,7 +14,7 @@
 .switch + label {
   display: flex;
   align-items: center;
-  font-size: 1, 5em;
+  font-size: 1.5em;
   cursor: pointer;
   color: var(--primary-text-color);
 }
