--- a/src/ProjectCard.css
+++ b/src/ProjectCard.css
@@ -50,7 +50,6 @@
   height: 350px;
   border-radius: 5px;
   box-shadow: 0 0 5px 2px rgba(50, 50, 50, 0.25);
-  transition: transform 1500ms;
 }
 .card p {
   padding-left: 0.5em;
@@ -66,11 +65,26 @@
   gap: 0.5em;
 }
 .open {
-  position: absolute;
+  position: fixed;
   top: 10%;
-  left: 10%;
-  transform: scale(1.8);
+  left: 20%;
+  width: 60vw;
+  height: auto;
+  background: var(--background-color);
+  border-radius: 10px;
+  padding: 30px 30px;
+  opacity: 0;
+  transform: translateY(-20px);
+  transition: opacity 0.5s ease-in-out;
 }
+.show {
+  opacity: 1;
+}
+body:has(.open) > #root {
+  filter: blur(10px);
+  pointer-events: none;
+}
+
 @media only screen and (max-width: 580px) {
   .container {
     width: 300px;
