Remove css fle for projectcard detailed

--- a/src/ProjectCard.css
+++ b/src/ProjectCard.css
@@ -22,6 +22,52 @@
   display: flex;
   gap: 0.5em;
 }
+.open {
+  position: fixed;
+  top: 10%;
+  left: 10%;
+  width: 60vw;
+  height: auto;
+  background: var(--background-color);
+  border-radius: 10px;
+  padding: 30px 30px;
+  opacity: 0;
+  transform: translateY(-20px);
+  transition: opacity 0.5s ease-in-out;
+  cursor: auto;
+  width: 80vw;
+  height: 80vh;
+  gap: 1em;
+}
+
+.show {
+  opacity: 1;
+}
+.show button {
+  cursor: pointer;
+  align-self: flex-end;
+  border-radius: 0;
+  width: 1.5em;
+  height: 1.5em;
+  border: none;
+  padding: 0.3em;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+}
+.show button:hover {
+  background-color: red;
+  color: white;
+}
+body:has(.open) > #root {
+  filter: blur(10px);
+  pointer-events: none;
+}
+.tech-stack {
+  font-weight: 600;
+  align-self: flex-start;
+}
+
 @media only screen and (max-width: 580px) {
   .card {
     width: 300px;
