--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,11 @@ footer {
   justify-content: center;
   align-items: center;
   border-top: 2px solid var(--primary-text-color);
+  gap: 1em;
+}
+footer img {
+  width: 2em;
+  height: 2em;
 }
 @media only screen and (max-width: 780px) {
   footer {
