--- a/src/LandingPage.css
+++ b/src/LandingPage.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap");
 /* Landing page */
 main {
   padding: 10em;
@@ -12,6 +13,9 @@ main {
   gap: 5em;
 }
 .hero h1 {
+  font-family: "Titillium Web", serif;
+  font-weight: 700;
+  font-style: normal;
   font-size: 6em;
   align-self: flex-start;
 }
