--- a/src/LandingPage.css
+++ b/src/LandingPage.css
@@ -81,10 +81,6 @@ legend {
 }
 .projects {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  gap: 2em;
-  align-items: center;
 }
 
 @media only screen and (max-width: 780px) {
@@ -114,5 +110,13 @@ legend {
 @media only screen and (max-width: 380px) {
   main {
     padding: 1em;
+  }
+}
+@media screen and (max-width: 780px) {
+  .projects {
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+    align-items: center;
   }
 }
