--- a/src/ProjectCard.css
+++ b/src/ProjectCard.css
@@ -1,5 +1,5 @@
 .card {
-  padding-top: 0.5em;
+  padding: 0.5em;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -38,6 +38,7 @@
   cursor: auto;
   width: 80vw;
   height: 80vh;
+  min-height: fit-content;
   gap: 1em;
 }
 
@@ -74,6 +75,7 @@ body:has(.open) > #root {
   .card {
     width: 300px;
     height: 250px;
+    min-height: fit-content;
   }
   .open img {
     min-height: 10vh;
