--- a/src/ProjectCard.css
+++ b/src/ProjectCard.css
@@ -6,7 +6,7 @@
   width: 500px;
   height: 350px;
   border-radius: 5px;
-  box-shadow: 0 0 5px 2px rgba(50, 50, 50, 0.25);
+  box-shadow: 0 0 5px 2px var(--shadow-color);
   cursor: pointer;
 }
 .card p {
