--- a/src/main.css
+++ b/src/main.css
@@ -16,6 +16,7 @@
   --bg-code: #c6c8ca;
   --link-color: ;
   --post-border: black;
+  --shadow-color: rgba(50, 50, 50, 0.25);
 }
 [data-theme="dark"] {
   --background-color: #0a0a0a;
@@ -26,4 +27,5 @@
   --toggle-fg: #00a6ff;
   --bg-code: #f6f8fa;
   --post-border: #eee;
+  --shadow-color: rgb(252, 252, 252, 0.5);
 }
