--- a/src/Blog.css
+++ b/src/Blog.css
@@ -7,6 +7,12 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: 70vh;
+}
+.loading {
+  font-size: 2em;
+  color: var(--secondary-text-color);
+  margin-top: 2em;
 }
 .post {
   margin: 2em 0;
@@ -52,6 +58,21 @@ code {
 .blog-container a:hover {
   color: var(--accent-hover);
 }
+.blog-container a::after {
+  content: "";
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 0;
+  height: 2px;
+  background: linear-gradient(90deg, var(--accent-color), var(--accent-hover));
+  transition: width 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.blog-container a:hover::after {
+  width: 100%;
+}
+
 @media only screen and (max-width: 480px) {
   .post {
     min-width: 70%;
